--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
